--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-  <!-- TODO: Set the document title to the name of your application -->
-  <title>MedicConnect</title>
+  <!-- Set the document title to CODEBLUER -->
+  <title>CODEBLUER</title>
   <meta name="description" content="Professional community for EMTs & Paramedics" />
-  <meta name="author" content="MedicConnect" />
+  <meta name="author" content="CODEBLUER" />
 
-  <!-- TODO: Update og:title to match your application name -->
-  <meta property="og:title" content="MedicConnect" />
+  <meta property="og:title" content="CODEBLUER" />
   <meta property="og:description" content="Professional community for EMTs & Paramedics" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@MedicConnect" />
+  <meta name="twitter:site" content="@CODEBLUER" />
   <meta name="twitter:image" content="" />
 </head>
 
