--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
   <!-- Set the document title to CODEBLUER -->
   <title>CODEBLUER</title>
-  <meta name="description" content="Professional community for EMTs & Paramedics" />
+  <meta name="description" content="EMR COMMUNITY" />
   <meta name="author" content="CODEBLUER" />
 
   <meta property="og:title" content="CODEBLUER" />
-  <meta property="og:description" content="Professional community for EMTs & Paramedics" />
+  <meta property="og:description" content="EMR COMMUNITY" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="" />
 
